--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
 <!DOCTYPE html>
+<html>
+<head>
+    <title>Forza Ferrari</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <img src="images/logo.png" alt="Ferrari Logo" style="width: 150px;">
+    <h1>Forza Ferrari F1 Team</h1>
+    <ul>
+        <li><a href="vettel.html">Sebastian Vettel</a></li>
+        <li><a href="leclerc.html">Charles Leclerc</a></li>
+        <li><a href="sainz.html">Carlos Sainz</a></li>
+        <li><a href="hamilton.html">Lewis Hamilton</a></li>
+        <li><a href="zhou.html">Guanyu Zhou</a></li>
+    </ul>
+</body>
+</html>
