--- a/hamilton.html
+++ b/hamilton.html
@@ -7,7 +7,7 @@
 <body>
   <div class="container">
     <h1>Lewis Hamilton</h1>
-    <img src="images/sainz.jpg" alt="Lewis Hamilton" width="300">
+    <img src="images/hamilton.jpg" alt="Lewis Hamilton" width="300">
     <p>Sir Lewis Hamilton is a British Formula 1 driver, widely regarded as one of the greatest in the sport's history. Born on January 7, 1985, in Stevenage, England, he has achieved numerous milestones throughout his illustrious career.Hamilton holds records for the most wins, pole positions, and podium finishes in Formula 1 history. He is tied with Michael Schumacher for the most World Championships at seven.</p>
     <br>
     <a href="index.html">Back to Home</a>
