--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="images/logo.png" alt="Ferrari Logo" style="width: 150px;">
+    <div class="container">
+        <div class="text">
+    
     <h1>Forza Ferrari F1 Team</h1>
     <ul>
         <li><a href="vettel.html">Sebastian Vettel</a></li>
@@ -14,5 +16,10 @@
         <li><a href="hamilton.html">Lewis Hamilton</a></li>
         <li><a href="zhou.html">Guanyu Zhou</a></li>
     </ul>
+        </div>
+        <div class="image">
+            <img src="images/logo.png" alt="Ferrari Logo">
+    </div>
+    </div>
 </body>
 </html>
