--- a/leclerc.html
+++ b/leclerc.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Charles Leclerc</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Charles Leclerc - Forza Ferrari</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Charles Leclerc</h1>
-    <img src="images/leclerc.jpg" alt="Charles Leclerc" width="300">
-    <p>Charles Leclerc began his Formula 1 career with Sauber in 2018 and joined Ferrari in 2019, becoming the youngest driver to hold a Ferrari F1 seat in 50 years. He has achieved multiple Grand Prix victories, including a notable win at his home race in Monaco in 2024, making him the first Monégasque driver to win the Monaco Grand Prix as a Formula One World Championship event..</p>
-    <br>
-    <a href="index.html">Back to Home</a>
-  </div>
+    <div class="container">
+        <div class="text">
+            <h2>Charles Leclerc</h2>
+            <p>Charles Leclerc is a talented Monegasque driver who joined Ferrari in 2019. Known for his speed, racecraft, and fierce competitiveness, he quickly became a fan favorite and the future hope of the Scuderia.</p>
+        </div>
+        <div class="image">
+            <img src="images/leclerc.jpg" alt="Charles Leclerc">
+        </div>
+    </div>
 </body>
 </html>
+
