--- a/sainz.html
+++ b/sainz.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Carlos Sainz</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Carlos Sainz - Forza Ferrari</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Carlos Sainz</h1>
-    <img src="images/sainz.jpg" alt="Carlos Sainz" width="300">
-    <p>Carlos Sainz Jr. is a Spanish Formula 1 driver born on September 1, 1994, in Madrid. He is the son of two-time World Rally Champion Carlos Sainz Sr. Sainz Jr. began his F1 career in 2015 with Toro Rosso and has since raced for Renault, McLaren, Ferrari, and currently, Williams.</p>
-    <br>
-    <a href="index.html">Back to Home</a>
-  </div>
+    <div class="container">
+        <div class="text">
+            <h2>Carlos Sainz</h2>
+            <p>Carlos Sainz, hailing from Spain, joined Ferrari in 2021. He is known for his consistency, strategic mind, and adaptability, delivering strong performances and contributing to Ferrari’s resurgence.</p>
+        </div>
+        <div class="image">
+            <img src="images/sainz.jpg" alt="Carlos Sainz">
+        </div>
+    </div>
 </body>
 </html>
