--- a/vettel.html
+++ b/vettel.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Sebastian Vettel</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Sebastian Vettel - Forza Ferrari</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Sebastian Vettel</h1>
-    <img src="images/vettel.jpg" alt="Sebastian Vettel" width="300">
-    <p>Sebastian Vettel is a four-time F1 World Champion. He raced for Ferrari from 2015 to 2020, bringing experience and leadership to the team.Always known for his kindness and welcoming nature that brings all drivers together for tributes till date.</p>
-    <br>
-    <a href="index.html">Back to Home</a>
-  </div>
+    <div class="container">
+        <div class="text">
+            <h2>Sebastian Vettel</h2>
+            <p>Vettel is a four-time world champion who raced for Ferrari from 2015 to 2020. He brought experience, leadership, and passion to the team, winning races and hearts during his time in red.</p>
+        </div>
+        <div class="image">
+            <img src="images/vettel.jpg" alt="Sebastian Vettel">
+        </div>
+    </div>
 </body>
 </html>
