--- a/zhou.html
+++ b/zhou.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Zhou Guanyu</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Guanyu Zhou - Forza Ferrari</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>Zhou Guanyu</h1>
-    <img src="images/zhou.jpg" alt="Zhou Guanyu" width="300">
-    <p>Zhou made history as the first Chinese driver in Formula 1, debuting with Alfa Romeo (now Stake F1 Team Kick Sauber) in 2022.
-
-He chose car number 24 to honor his sporting hero, Kobe Bryant.</p>
-    <br>
-    <a href="index.html">Back to Home</a>
-  </div>
+    <div class="container">
+        <div class="text">
+            <h2>Guanyu Zhou</h2>
+            <p>Zhou is China’s first Formula 1 driver, known for his calm composure and rapid development. Though not a Ferrari regular, he represents the growing global diversity in Formula 1.</p>
+        </div>
+        <div class="image">
+            <img src="images/zhou.jpg" alt="Guanyu Zhou">
+        </div>
+    </div>
 </body>
 </html>
