--- a/leclerc.html
+++ b/leclerc.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="text">
             <h2>Charles Leclerc</h2>
-            <p>Charles Leclerc is a talented Monegasque driver who joined Ferrari in 2019. Known for his speed, racecraft, and fierce competitiveness, he quickly became a fan favorite and the future hope of the Scuderia.</p>
+            <p>Charles Leclerc, born on October 16, 1997, in Monaco, is one of the most promising young talents in Formula 1. He made his F1 debut with Sauber in 2018 before moving to Ferrari in 2019. In only his second season, he won two Grand Prix races — in Belgium and Italy — instantly becoming a Ferrari hero. Leclerc is known for his aggressive qualifying pace, strategic intelligence, and calm under pressure. As Ferrari’s lead driver in the post-Vettel era, he symbolizes the team's future hopes of championship glory. Off the track, he's admired for his humility and strong connection to fans.Charles Leclerc is a talented Monegasque driver who joined Ferrari in 2019. Known for his speed, racecraft, and fierce competitiveness, he quickly became a fan favorite and the future hope of the Scuderia.</p>
         </div>
         <div class="image">
             <img src="images/leclerc.jpg" alt="Charles Leclerc">
