--- a/zhou.html
+++ b/zhou.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="text">
             <h2>Guanyu Zhou</h2>
-            <p>Zhou is China’s first Formula 1 driver, known for his calm composure and rapid development. Though not a Ferrari regular, he represents the growing global diversity in Formula 1.</p>
+            <p>Guanyu Zhou, born May 30, 1999, in Shanghai, China, became the first full-time Chinese driver in Formula 1 when he joined Alfa Romeo in 2022. Although not a Ferrari factory driver, Zhou races with a Ferrari-powered team, making him a significant figure in the Ferrari engine family. He is known for his smooth driving style, consistent performances, and role as a trailblazer for motorsport in Asia. Zhou’s journey to F1 included strong results in Formula 2 and roles as a test and development driver for Alpine. His presence has helped expand F1’s global reach and inspires a new generation of fans in China.Zhou is China’s first Formula 1 driver, known for his calm composure and rapid development. Though not a Ferrari regular, he represents the growing global diversity in Formula 1.</p>
         </div>
         <div class="image">
             <img src="images/zhou.jpg" alt="Guanyu Zhou">
