--- a/hamilton.html
+++ b/hamilton.html
@@ -14,7 +14,7 @@
     <a href="index.html">Back to Home</a>
   </div>
     <div class="image">
-      <img src="images/hamilton.jpg" alt="Lewis Hamilton">
+      <img src="images/hamilton.png" alt="Lewis Hamilton">
     </div>
   </div>
 </body>
