--- a/sainz.html
+++ b/sainz.html
@@ -11,7 +11,7 @@
             <p>Carlos Sainz Jr., born September 1, 1994, in Madrid, Spain, is the son of legendary rally champion Carlos Sainz Sr. He began his F1 journey with Toro Rosso in 2015 and later drove for Renault and McLaren. In 2021, he joined Ferrari, quickly building a reputation for consistency, teamwork, and racecraft. In his debut season with the Scuderia, Sainz outscored his teammate Leclerc and achieved multiple podiums. His calm demeanor and engineering insight make him a valuable asset to Ferrari’s development. Nicknamed “Smooth Operator,” Sainz is respected across the grid for his reliability and resilience.Carlos Sainz, hailing from Spain, joined Ferrari in 2021. He is known for his consistency, strategic mind, and adaptability, delivering strong performances and contributing to Ferrari’s resurgence.</p>
         </div>
         <div class="image">
-            <img src="images/sainz.jpg" alt="Carlos Sainz">
+            <img src="images/sainz.png" alt="Carlos Sainz">
         </div>
     </div>
 </body>
