--- a/vettel.html
+++ b/vettel.html
@@ -11,7 +11,7 @@
             <p>Sebastian Vettel, born July 3, 1987, in Germany, is a four-time Formula 1 World Champion (2010–2013) with Red Bull Racing. He joined Ferrari in 2015, carrying the hopes of ending their championship drought. Over six seasons with Ferrari, Vettel secured 14 race wins and consistently challenged at the front. He was admired for his passion, deep respect for Ferrari’s legacy, and leadership on and off the track. Though he never clinched a title with Ferrari, he left behind a legacy of sportsmanship and commitment. Vettel retired in 2022, but remains a beloved figure among tifosi and motorsport fans worldwide.Vettel is a four-time world champion who raced for Ferrari from 2015 to 2020. He brought experience, leadership, and passion to the team, winning races and hearts during his time in red.</p>
         </div>
         <div class="image">
-            <img src="images/vettel.jpg" alt="Sebastian Vettel">
+            <img src="images/vettel.png" alt="Sebastian Vettel">
         </div>
     </div>
 </body>
